...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout="@layout/fragment_top_toolbar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_persona_duda"
            android:layout_width="143dp"
            android:layout_height="124dp"
            android:contentDescription="@string/app_name"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
...
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonVerAmigos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:background="@drawable/button_rounded_corners_secondary"
            android:text="@string/amigos"
            android:textColor="@color/white"
...
