...

    <item android:id="@+id/nav_dudas"
        android:title=""
        android:icon="@drawable/dudas_nav"
        />

    <item android:id="@+id/nav_cuenta"
        android:title=""
        android:icon="@drawable/cuenta_nav"
        />

</menu>
